--- a/subgraph.template.yaml
+++ b/subgraph.template.yaml
@@ -7,7 +7,7 @@ dataSources:
     network: {{RealTokenYamNetwork}}
     source:
       abi: RealTokenYam
-      address: {{RealTokenYamAddress}}
+      address: "{{RealTokenYamAddress}}"
       startBlock: {{RealTokenYamStartBlock}}
     mapping:
       kind: ethereum/events
